java-tomcat-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-tomcat-deployment
  namespace: java-tomcat
  labels:
    app: java-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java-app
  template:
    metadata:
      labels:
        app: java-app
    spec:
      containers:
      - name: java-app
        #image: $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
        image: 239786103795.dkr.ecr.ap-south-1.amazonaws.com/java-tomcat-app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
