java-tomcat-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-tomcat-service
  namespace: java-tomcat
  labels:
    app: java-app
spec:
  selector:
    app: java-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
