ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: java-tomcat
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: 110m
spec:
  ingressClassName: nginx
  rules:
    - host: a81fa910663584b0495ba42342197821-9503528797ca8e57.elb.ap-south-1.amazonaws.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            #pathType: Exact
            backend:
              service:
                name: java-tomcat-service
                port:
                  number: 80
